syntax = "proto3";

package modes3.protobuf;
option java_package = "hu.bme.mit.inf.modes3.messaging.proto.messages";
option java_multiple_files = true;

enum DccOperations {
	NORMAL_OPERATIONS = 0;
	STOP_ALL_LOCOMOTIVES = 1;
	STOP_OPERATIONS = 2;
}

enum MessageType {
	NULL = 0;
	SEGMENT_COMMAND = 1;
	SEGMENT_STATE = 2;
	TRAIN_REFERENCE_SPEED = 3;
	TRAIN_REFERENCE_SPEED_COMMAND = 4;
	TURNOUT_COMMAND = 5;
	TURNOUT_STATE = 6;
	SEGMENT_OCCUPANCY = 7;
	TURNOUT_REFERENCE_STATE = 8;
	DCC_OPERATIONS_COMMAND = 9;
	DCC_OPERATIONS_STATE = 10;
	SEND_ALL_STATUS = 11;
	COMPUTER_VISION_OBJECT_POSITIONS = 23;
}

enum SegmentStateValue {
	DISABLED = 0;
	ENABLED = 1;
}

enum TrainDirectionValue {
	FORWARD = 0;
	BACKWARD = 1;
}

enum TurnoutStateValue {
	STRAIGHT = 0;
	DIVERGENT = 1;
}

enum SegmentOccupancyValue {
	FREE = 0;
	OCCUPIED = 1;
}
