syntax = "proto3";

package modes3.protobuf;

import "DccOperationsCommand.proto";
import "DccOperationsState.proto";
import "Enums.proto";
import "SegmentCommand.proto";
import "SegmentState.proto";
import "TrainReferenceSpeed.proto";
import "TrainReferenceSpeedCommand.proto";
import "TurnoutCommand.proto";
import "TurnoutState.proto";
import "TurnoutReferenceState.proto";
import "SegmentOccupancy.proto";
import "SendAllStatus.proto";
import "ComputerVisionObjectPositions.proto";

option java_package = "hu.bme.mit.inf.modes3.messaging.proto.messages";
option java_multiple_files = true;

message Message {
	MessageType type = 1;
	SegmentCommand segmentCommand = 2;
	SegmentState segmentState = 3;
	TrainReferenceSpeed trainReferenceSpeed = 4;
	TrainReferenceSpeedCommand trainReferenceSpeedCommand = 5;
	TurnoutCommand turnoutCommand = 6;
	TurnoutState turnoutState = 7;
	SegmentOccupancy segmentOccupancy = 8;
	TurnoutReferenceState turnoutReferenceState = 9;
	DccOperationsCommand dccOperationsCommand = 10;
	DccOperationsState dccOperationsState = 11;
	SendAllStatus allStatus = 12;
	ComputerVisionObjectPositions computerVisionObjectPositions = 13;
}
